# skip-a-herz

./: Cargo.toml  README.md  skip-a-herz.fzz
.cargo/: config.toml
.github/workflows/: ci_checks.yml  rust.yml
src/: main.rs
