[package]
name = "skip-a-herz"
description = "project that explores the just noticeable difference (JND) in human perception of time gaps between tones"
categories = ["embedded"]
keywords = ["audio"]
authors = ["crjeder <crjeder@gmail.com>"]
repository = "https://github.com/crjeder/hx711_spi"
readme = "README.md"
documentation = "https://docs.rs/hx711_spi"
license = "MIT OR Apache-2.0"
edition = "2021"
version = "0.0.1"
include = ["src/main.rs", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
rp-pico = "0.9"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }
debouncr = { version = "0.2.2" }
rand = "0.9.1"

[features]
default = ["rp-pico/rt"]

# from rp2040-project-template
#https://github.com/rp-rs/rp2040-project-template/blob/main/Cargo.toml
# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
