[package]
name = "skip-a-herz"
description = "project that explores the just noticeable difference (JND) in human perception of time gaps between tones"
categories = ["embedded"]
keywords = ["audio"]
authors = ["crjeder <crjeder@gmail.com>"]
#repository = "https://github.com/crjeder/hx711_spi"
readme = "README.md"
documentation = "https://docs.rs/hx711_spi"
license = "MIT OR Apache-2.0"
edition = "2021"
version = "0.0.1"
include = ["src/main.rs", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
rp-pico = { version = "0.9", features = ["rt"] }
embedded-hal = "1.0"
panic-halt = "1.0"

debouncr = { version = "0.2.2" }
rand = { version = "0.9.2", features = ["small_rng"], default-features = false }
rand_core = { version = "0.9.3", default-features = false }
embassy-executor = { version = "0.8.0", default-features = false, features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "executor-interrupt",
] }
embassy-time = { version = "0.4.0", default-features = false, features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.7.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embassy-futures = "0.1.1"
embassy-sync = { version = "0.7", features = ["defmt"] }

futures = { version = "0.3", default-features = false, features = [
    "async-await",
] }
trouble-example-apps = { version = "0.1.0", path = "../apps", features = [
    "defmt",
] }
trouble-host = { path = "../../host", features = [
    "default-packet-pool-mtu-128",
] }
cyw43 = { version = "0.4.0", features = [
    "defmt",
    "firmware-logs",
    "bluetooth",
] }
cyw43-pio = { version = "0.6.0", features = ["defmt"] }

defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }


# from rp2040-project-template
#https://github.com/rp-rs/rp2040-project-template/blob/main/Cargo.toml
# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
